2009-11-25 JFL Peripheral Solutions jimw@jflinc.com


    * Fix FloatToFIX32 rounding error for negitive values
    * change from GetArray to getItem for Array and Enumeration caps
    * update get_message to work with MSG_GET, MSG_GETCURRENT, MSG_GETDEFAULT Use 
        CListCtrl for listing capabilities

2009-11-05 JFL Peripheral Solutions jimw@jflinc.com

    * Update to TWAIN version 2.1 of the specificaion
    * allow to set the default DS
    * Start with the default DS is either of the Shift keys are held down when launched.
    * update installer to include DSM2.1.0

2009-07-16 JFL Peripheral Solutions jimw@jflinc.com

    * Update installer to use newest DSM merge module
    * Pass the Windows handle to EnableDS if we have it
    * Sort the list of DS and enumerations
    * Add many strings to dispay known capabilities and enumerations values.
    * Update 64bit Windows installer to install both 32bit and 64bit App

2009-05-12 JFL Peripheral Solutions jimw@jflinc.com

    * Mark read only caps with a 'r' 

2009-05-12 JFL Peripheral Solutions jimw@jflinc.com

    * Simplified the method to get the current value in CommonTWAIN. 
    * Expanded convertCAP_Item_toString to take into account the Type
    * Simplified print_ICAP to eliminate many overloaded functions.  
    * Expand print_ICAP to handle more TWAIN types.
        
2009-03-16 JFL Peripheral Solutions jimw@jflinc.com

    * Display bool Capabilities correctly. 
    * Double clicking on a bool capability to attempt to set it to the opposite
    * Fix bugs in Extended Image Info
    * Fix bug with scanning with UI
        
2009-01-06 JFL Peripheral Solutions jimw@jflinc.com

    * Updated the TWAIN2 Sample Application to separate CMD and GUI implementations and 
        create some more base classes to make it easier to derive more applications. 
    * Updated the TWAIN2 Sample App GUI to display all capabilities supported, not just 
        the 4 or 5 that were hardcoded.