@@ -1,15 +1,19 @@
 2009-11-25 JFL Peripheral Solutions jimw@jflinc.com
 
+    * Use color on CListCtrl to show readonly and changed capabilities
+    * Add open DS UIOnly
+
+2009-11-25 JFL Peripheral Solutions jimw@jflinc.com
 
     * Fix FloatToFIX32 rounding error for negitive values
-    * change from GetArray to getItem for Array and Enumeration caps
+    * Change from GetArray to getItem for Array and Enumeration caps
     * update get_message to work with MSG_GET, MSG_GETCURRENT, MSG_GETDEFAULT Use 
         CListCtrl for listing capabilities
 
 2009-11-05 JFL Peripheral Solutions jimw@jflinc.com
 
     * Update to TWAIN version 2.1 of the specificaion
-    * allow to set the default DS
+    * Allow to set the default DS
     * Start with the default DS is either of the Shift keys are held down when launched.
     * update installer to include DSM2.1.0
 
